--- a/baitapHTML1.html
+++ b/baitapHTML1.html
@@ -26,11 +26,11 @@
       </div>
       <div class="form-group">
         <label for="datepicker1">CHECK IN</label><br>
-        <input type="text" class="form-control" id="datepicker1" placeholder="dd/mm/yyyy">
+        <input type="text" class="form-control" id="datepicker1" placeholder="mm/dd/yyyy">
       </div>
       <div class="form-group">
         <label for="datepicker2">CHECK OUT</label><br>
-        <input type="text" class="form-control" id="datepicker2" placeholder="dd/mm/yyyy">
+        <input type="text" class="form-control" id="datepicker2" placeholder="mm/dd/yyyy">
       </div>
       <div class="form-group">
         <label for="exampleFormControlSelect1">ADULTS</label><br>
