--- a/index.html
+++ b/index.html
@@ -2,9 +2,71 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Nguyễn Trọng Vũ</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	
+	<section>
+		<div class="header">
+			<div class="h2"><h2 >Find homes in United States on Airbnb</h2></div>
+			<div>Discover entire homes and private rooms perfect for any trip</div>
+			<div class="firstform">
+				<form action="">
+					<div><span>WHERE</span></div>
+					<div><input type="text" placeholder="AnyWhere"></div>
+					<div class="checking">
+						<div class=""><span>CHECK IN</span></div>
+						<div><input type="date" ></div>
+					</div>	
+					<div class="checking">
+						<div><span>CHECK OUT</span></div>
+						<div><input type="date" ></div>
+					</div>					
+					<div class="option">
+						<div class="option adult">
+							<div><span>ADULTS</span></div>
+							<select name="adult" id="">
+								<option value="2">1 adults</option>
+								<option value="2">2 adults</option>
+								<option value="2">3 adults</option>
+								<option value="2">4 adults</option>
+								<option value="2">5 adults</option>
+								<option value="2">6 adults</option>
+								<option value="2">7 adults</option>
+								<option value="2">8 adults</option>
+								<option value="2">9 adults</option>
+								<option value="2">10 adults</option>
+								<option value="2">11 adults</option>
+								<option value="2">12 adults</option>
+								<option value="2">13 adults</option>
+								<option value="2">14 adults</option>
+								<option value="2">15 adults</option>
+								<option value="2">16 adults</option>
+							</select>
+						</div>
+
+						<div class="option children">
+							<div><span>CHILDREN</span></div>
+							<select name="children" id="">
+								<option value="">0 chilren</option>
+								<option value="">1 child</option>
+								<option value="">2 chilren</option>
+								<option value="">3 chilren</option>
+								<option value="">4 chilren</option>
+								<option value="">5 chilren</option>
+							</select>
+						</div>
+					</div>
+					<div class="searchbtn">
+						<input type="submit" value="search">
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<hr>
+		<div>© Airbnb, Inc.</div>
+	</footer>
 </body>
 </html>
