--- a/index.html
+++ b/index.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
+	<!-- Basic Page Needs
+	================================================== -->
+	<meta charset="utf-8">
+	<title>Vacation Homes & Condo Rentals - Airbnb</title>
+	<meta name="description" content="">
+	<meta name="author" content="MyVT">
+	<!-- Mobile Specific Metas
+  	================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
+    <link rel="stylesheet" href="css/main.css"/>
+</head>
+
+<body>
+	<div class="page-content">
+		<!-- Search Form Section -->
+		<section class="search-form">
+			<div class="content">
+				<div class="images">
+					<img src="https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg" alt="background-image">
+				</div>
+				<div class="form-content">
+					<form class="form-detail" action="#" method="post">
+						<h2>Find homes in United States on Airbnb</h2>
+						<p>Discover entire homes and private rooms perfect for any trip.</p>
+						<div class="form-group">
+							<div class="form-row">
+								<label for="locate">WHERE</label>
+								<input type="text" name="locate" id="locate" placeholder="Anywhere" required>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="form-row form-row-1">
+								<label for="checkin">CHECK-IN</label>
+								<input type="date" name="checkin" id="checkin" required>
+							</div>
+							<div class="form-row form-row-1">
+								<label for="checkout">CHECKOUT</label>
+								<input type="date" name="checkout" id="checkout" required>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="form-row form-row-1">
+								<label for="adults">ADULTS</label>
+								<select name="adults" id="adults">
+									<option value="1 adult">1 adult</option>
+									<option value="2 adults">2 adults</option>
+									<option value="3 adults">3 adults</option>
+									<option value="4 adults">4 adults</option>
+									<option value="5 adults">5 adults</option>
+									<option value="6 adults">6 adults</option>
+									<option value="7 adults">7 adults</option>
+									<option value="8 adults">8 adults</option>
+									<option value="9 adults">9 adults</option>
+									<option value="10 adults">10 adults</option>
+									<option value="11 adults">11 adults</option>
+									<option value="12 adults">12 adults</option>
+									<option value="13 adults">13 adults</option>
+									<option value="14 adults">14 adults</option>
+									<option value="15 adults">15 adults</option>
+									<option value="16 adults">16 adults</option>
+								</select>
+							</div>
+							<div class="form-row form-row-1">
+								<label for="children">CHILDREN</label>
+								<select name="children" id="children">
+									<option value="0 children">0 children</option>
+									<option value="1 children">1 children</option>
+									<option value="2 children">2 children</option>
+									<option value="3 children">3 children</option>
+									<option value="4 children">4 children</option>
+									<option value="5 children">5 children</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-row-last">
+							<input type="submit" name="search" class="search" value="Search">
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
