--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Mobile Specific Metas
   	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
+
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 
@@ -84,5 +84,10 @@
 			</div>
 		</section>
 	</div>
+	<footer class="footer-section">
+		<div class="sub-footer">
+			<span>© Airbnb, Inc.</span>
+		</div>
+	</footer>
 </body>
 </html>
