--- a/baitapHTML1.html
+++ b/baitapHTML1.html
@@ -16,35 +16,46 @@
 <body>
  <header>
   <img src="https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg" alt="anh banner">
-  <div class="form-find">
+  <div class="form-search">
     <h2>Find homes in United States on Airbnb</h2>
     <p>Discover entire homes and private rooms perfect for any trip.</p>
-    <form>
+    <form action="#" method="post">
       <div class="form-group">
-        <label for="formGroupExampleInput">WHERE</label><br>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Anywhere">
+        <label for="where">WHERE</label><br>
+        <input type="text" class="form-control" id="where" name="where" placeholder="Anywhere">
       </div>
       <div class="form-group">
         <label for="datepicker1">CHECK IN</label><br>
-        <input type="text" class="form-control" id="datepicker1" placeholder="mm/dd/yyyy">
+        <input type="text" class="form-control" id="datepicker1" name="checkin" placeholder="mm/dd/yyyy">
       </div>
       <div class="form-group">
         <label for="datepicker2">CHECK OUT</label><br>
-        <input type="text" class="form-control" id="datepicker2" placeholder="mm/dd/yyyy">
+        <input type="text" class="form-control" id="datepicker2" name="checkout" placeholder="mm/dd/yyyy">
       </div>
       <div class="form-group">
         <label for="exampleFormControlSelect1">ADULTS</label><br>
-        <select class="form-control" id="exampleFormControlSelect1">
+        <select class="form-control" id="exampleFormControlSelect1" name="adults">
           <option>1 adult</option>
           <option>2 adults</option>
           <option>3 adults</option>
           <option>4 adults</option>
           <option>5 adults</option>
+          <option>6 adults</option>
+          <option>7 adults</option>
+          <option>8 adults</option>
+          <option>9 adults</option>
+          <option>10 adults</option>
+          <option>11 adults</option>
+          <option>12 adults</option>
+          <option>13 adults</option>
+          <option>14 adults</option>
+          <option>15 adults</option>
+          <option>16 adults</option>
         </select>
       </div>
       <div class="form-group">
         <label for="exampleFormControlSelect2">CHILDRENS</label><br>
-        <select class="form-control" id="exampleFormControlSelect2">
+        <select class="form-control" id="exampleFormControlSelect2" name="children">
           <option>0 children</option>
           <option>1 child</option>
           <option>2 children</option>
