--- a/index.html
+++ b/index.html
@@ -2,9 +2,67 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Document</title>	
+
 </head>
 <body>
+	<div id="main" style="width: 100%; height: 2528px; background-color: #ffffff;">
+		<div id="menu">
+			<img src="picture/1.jpg" width="100%" height="689" >	
+
+			<div  style="width: 510px;height: 560px;background-color: pink;">
+				<h2 style="font-size: 2em;margin: 35px;float: left;">Find homes in United States on Airbnb</h2>
+				<p style="margin-left: 35px;font-size: 18px;margin-top: -30px;margin-bottom: 8px;float: left;">Discover entire homes and private rooms perfect for any trip.</p>
+				<span style="margin-left: 35px;font-size: 12px;font-weight: 800 ">WHERE</span>
+				<input type="text" placeholder="AnyWhere" style="font-size: 16px;display: block;margin: 35px; width: 442px;height: 46px;margin-top: 0px;">
+				<div style="width:214px;height:77px;margin-left: 35px;float: left;margin-top: -30px;">
+					<span style="font-size: 12px;font-weight: 700;line-height:1.4em; ">CHECK-IN</span>
+					<input type="text" placeholder="mm/dd/yyyy" style="width: 212px;height: 49px;font-size: 16px;font-size: 16px;" >
+				</div>
+				<div style="width:214px;height:77px;margin-left: 17px;float: left;margin-top: -30px;">
+					<span style="font-size: 12px;font-weight: 700;line-height:1.4em; ">CHECKOUT</span>
+					<input type="text" placeholder="mm/dd/yyyy" style="width: 212px;height: 49px;font-size: 16px;font-size: 16px;" >
+				</div>
+				<div style="width:214px;height:77px;margin-left: 35px;float: left;">
+					<span style="font-size: 12px;font-weight: 700;line-height:1.4em;display: block; ">ADULTS</span>
+					<select data-vars-select-name="adults" style="width: 216px;height: 55px;">
+						<option selected="" value="1">1 adult</option>
+						<option value="2">2 adults</option>
+						<option value="3">3 adults</option>
+						<option value="4">4 adults</option>
+						<option value="5">5 adults</option>
+						<option value="6">6 adults</option>
+						<option value="7">7 adults</option>
+						<option value="8">8 adults</option>
+						<option value="9">9 adults</option>
+						<option value="10">10 adults</option>
+						<option value="11">11 adults</option>
+						<option value="12">12 adults</option>
+						<option value="13">13 adults</option>
+						<option value="14">14 adults</option>
+						<option value="15">15 adults</option>
+						<option value="16">16 adults</option>
+					</select>
+				</div>
+				<div style="width:214px;height:77px;margin-left: 17px;float: left;" >
+					<span style="font-size: 12px;font-weight: 700;line-height:1.4em;display: block; ">CHILDREN</span>
+					<select data-vars-select-name="children" style="width: 216px;height: 55px;">
+						<option selected="" value="0">0 children</option>
+						<option value="1">1 child</option>
+						<option value="2">2 children</option>
+						<option value="3">3 children</option>
+						<option value="4">4 children</option>
+						<option value="5">5 children</option>
+					</select>
+				</div>
+				<button  style="margin-left: 35px;width: 444px;height: 48px;">
+					<span >Search</span>
+				</button>
+
+			</div>	
+		</div>
+	</div>
 	
+
 </body>
 </html>
