--- a/HTML_Bai1/index.html
+++ b/HTML_Bai1/index.html
@@ -33,10 +33,10 @@
 
             <div>
                 <label for="">ADULTES</label>
-                <input type="text" placeholder="Partout">
+                <input type="date" placeholder="Partout">
 
                 <label for="">ENFANTS</label>
-                <input type="text" placeholder="Partout">
+                <input type="date" placeholder="Partout">
             </div>
             <br>
 
