--- a/HTML_Bai1/index.html
+++ b/HTML_Bai1/index.html
@@ -33,10 +33,21 @@
 
             <div>
                 <label for="">ADULTES</label>
-                <input type="date" placeholder="Partout">
+                <select name="" id="">
+                    <option value="0">0 adulte</option>
+                    <option value="1">1 adulte</option>
+                    <option value="2">2 adulte</option>
+                    <option value="3">3 adulte</option>
+                    <option value="4">4 adulte</option>
+                </select>
 
                 <label for="">ENFANTS</label>
-                <input type="date" placeholder="Partout">
+                <select name="" id="">
+                    <option value="0">0 enfant</option>
+                    <option value="1">1 enfant</option>
+                    <option value="2">2 enfant</option>
+                    <option value="3">3 enfant</option>
+                </select>
             </div>
             <br>
 
