--- a/day1.html
+++ b/day1.html
@@ -21,11 +21,11 @@
 				  <div class="form-group row">
 				  	<div class="col-lg-6">
 				  		<label><b>CHECK-IN</b></label>
-				  		<input type="datetime" class="form-control" name="check-in" placeholder="mm/dd/yy">
+				  		<input type="date" class="form-control" name="check-in" placeholder="mm/dd/yy">
 				  	</div>
 				  	<div class="col-lg-6">
 				  		<label><b>CHECK-OUT</b></label>
-				  		<input type="datetime" class="form-control" name="check-out"  placeholder="mm/dd/yy">
+				  		<input type="date" class="form-control" name="check-out"  placeholder="mm/dd/yy">
 				  	</div>
 				  </div>
 				  <div class="form-group row">
