--- a/index.html
+++ b/index.html
@@ -5,6 +5,129 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<header>
+		<div>
+			<h2>Find homes in US on Airbnb</h2>
+			<div>Discover entire homes and private rooms perfect for any trip</div>
+			<form><div>
+				<span>WHERE</span>
+				<input placeholder="Anywhere"/>
+			</div>
+			<div>
+				<label><span>CHECK-IN</span></label>
+				<input placeholder="mm/dd/yyyy"/>
+				<label><span>CHECK-OUT</span></label>
+				<input placeholder="mm/dd/yyyy"/>
+			</div>
+			<div>
+				<label><span>ADULTS</span></label>
+				<select placeholder="1 adult"></select>
+				<label><span>CHILDREN</span></label>
+				<select placeholder="0 children"></select>
+			</div>
+		</div>
+		<button>Search</button>
+	</form>
+	</header>
+	<section>
+		<div>
+			<h2>What guests are saying about homes in United States</h2>
+			<p>What guests are saying about homes in United States</p>
+		</div>
+		<div>
+			<img src="https://www.airbnb.com/rooms/329997"/>
+			<span><path>★★★★★</path></span>
+			<span>The studio is a really comfortable and well designed space, for those travellers looking for a place where they can totally relax after a </span>
+			<div>
+				<img src="https://a0.muscache.com/im/users/36137188/profile_pic/1434911824/original.jpg?aki_policy=large"/>
+				<span><b>Ann</b></span>
+				<span>United Kingdom</span>>
+			</div>
+		</div>
+		<div>
+			<img src="https://www.airbnb.com/rooms/1267141"/>
+			<span><path>★★★★★</path></span>
+			<span>The studio is a really comfortable and well designed space, for those travellers looking for a place where they can totally relax after a </span>
+			<div>
+					<img src="https://a0.muscache.com/im/users/24170121/profile_pic/1416974541/original.jpg?aki_policy=large"/>
+					<span><b>Marie</b></span>
+					<span>France</span>>
+				</div>
+		</div>
+		<div>
+			<img src="https://www.airbnb.com/rooms/329997"/>
+			<span><path>★★★★★</path></span>
+			<span>Tom and Judy were great hosts. Their home was beautiful, very clean and ideally located in Napa. I would recommend staying at their </span>
+			<div>
+					<img src="https://a0.muscache.com/im/users/7639912/profile_pic/1374485173/original.jpg?aki_policy=large"/>
+					<span><b>Marisa</b></span>
+					<span>United States</span>>
+				</div>
+		</div>
+		<div>
+			<h2>Traveling with Airbnb</h2>
+			<div>
+				<path>♥</path>
+				<h4>24/7 customer support</h4>
+				<span>Day or night, we’re here for you. Talk to our support team from anywhere in the world, any hour of day.</span>
+			</div>
+			<div>
+					<pat>⌂</path>
+					<h4>Global hospitality standards</h4>
+					<span>Guests review their hosts after each stay. All hosts must maintain a minimum rating and our hospitality standards to be on Airbnb.</span>
+			</div>
+			<div>
+					<path>♥</path>
+					<h4>5-star hosts</h4>
+					<span>From fresh-pressed sheets to tips on where to get the best brunch, our hosts are full of local hospitality..</span>
+			</div>
+		</div>
+		<div>
+			<h2>Just booked in United States</h2>
+			<div>
+				<img src="https://www.airbnb.com/rooms/1415908"/>
+				<span>TREEHOUSE · ATLANTA</span>
+				<span><b>Secluded Intown Treehouse</b></span>
+				<span>₫8,700,375 per night· Free cancellation</span>
+				<span><path>★★★★★ 329</path></span>
+			</div>
+			<div>
+					<img src="https://www.airbnb.com/rooms/32694"/>
+					<span>ENTIRE HOUSE · JOSHUA TREE</span>
+					<span><b>The Joshua Tree House</b></span>
+					<span>₫6,612,285 per night</span>
+					<span><path>★★★★★ 329</path></span>
+				</div>
+				<div>
+						<img src="https://www.airbnb.com/rooms/8357"/>
+						<span>DOME HOUSE · APTOS</span>
+						<span><b>Mushroom Dome Cabin: #1 on airbnb in the world
+							</b></span>
+						<span>₫3,016,130 per night
+								· Free cancellation
+							   </span>
+						<span><path>★★★★★ 1295 </path></span>
+					</div>
+					<div>
+							<img src="https://www.airbnb.com/rooms/19606"/>
+							<span>ENTIRE HOUSE · PIONEERTOWN</span>
+							<span><b>Off-grid itHouse</b></span>
+							<span>₫9,280,400 per night
+									· Free cancellation
+								   </span>
+							<span><path>★★★★★ 236 </path></span>
+						</div>
+						<span>Show all (22,000+) ></span>
+		</div>
+		<div>
+			<h2>When are you traveling?</h2>
+			<p>Add dates for updated pricing and availability.</p>
+			<button>Add dates</button>
+		</div>
+	</section>
+	<footer>
+		<img src="#"/>
+		<span>© Airbnb, Inc.</span>
+	</footer>
 </body>
 </html>
