--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 			<img src="Image/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg" alt="background images">
 		</div>
 		<div>
-			<form action="">
+			<form>
 				<h2>Trouvez des logements à États-Unis sur Airbnb</h2>
 				<div>Découvrez des chambres privées ou des logements entiers, parfaitement adaptés à tout type de voyage.</div>
 				<div>OÙ</div>
 				<input type="text" placeholder="Partout">
 				<div class="form-group">
 					<div>
-						<label for="">
+						<label>
 							<span>ARRIVÉE</span>
 						</label>
 					</div>
 					<div>
-						<input id="" class="form-control" type="date" placeholder="jj/mm/aaaa">
+						<input class="form-control" type="date" min="2019-03-18">
 					</div>
 					<div>
-						<label for="">
+						<label>
 							<span>DÉPART</span>
 						</label>
 					</div>
 					<div>
-						<input id="" class="form-control" type="date" placeholder="jj/mm/aaaa">
+						<input class="form-control" type="date" min="2019-03-18">
 					</div>
 				</div>
 				<div class="form-group">
