--- a/index.html
+++ b/index.html
@@ -1,82 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<!-- Latest compiled and minified CSS & JS -->
-</head>
-<body>
-	<header>
-		<div>
-			<img src="Image/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg" alt="background images">
-		</div>
-		<div>
-			<form>
-				<h2>Trouvez des logements à États-Unis sur Airbnb</h2>
-				<div>Découvrez des chambres privées ou des logements entiers, parfaitement adaptés à tout type de voyage.</div>
-				<div>OÙ</div>
-				<input type="text" placeholder="Partout">
-				<div class="form-group">
-					<div>
-						<label>
-							<span>ARRIVÉE</span>
-						</label>
-					</div>
-					<div>
-						<input class="form-control" type="date" min="2019-03-18">
-					</div>
-					<div>
-						<label>
-							<span>DÉPART</span>
-						</label>
-					</div>
-					<div>
-						<input class="form-control" type="date" min="2019-03-18">
-					</div>
-				</div>
-				<div class="form-group">
-					<div>
-						<label for="adults">ADULTS</label>
-						<select name="adults" id="adults">
-							<option value="1 adult">1 adult</option>
-							<option value="2 adults">2 adults</option>
-							<option value="3 adults">3 adults</option>
-							<option value="4 adults">4 adults</option>
-							<option value="5 adults">5 adults</option>
-							<option value="6 adults">6 adults</option>
-							<option value="7 adults">7 adults</option>
-							<option value="8 adults">8 adults</option>
-							<option value="9 adults">9 adults</option>
-							<option value="10 adults">10 adults</option>
-							<option value="11 adults">11 adults</option>
-							<option value="12 adults">12 adults</option>
-							<option value="13 adults">13 adults</option>
-							<option value="14 adults">14 adults</option>
-							<option value="15 adults">15 adults</option>
-							<option value="16 adults">16 adults</option>
-						</select>
-					</div>
-					<div>
-						<label for="enfants">ENFANTS</label>
-						<select name="enfants" id="enfants">
-							<option value="0 enfants">0 enfants</option>
-							<option value="1 enfants">1 enfants</option>
-							<option value="2 enfants">2 enfants</option>
-							<option value="3 enfants">3 enfants</option>
-							<option value="4 enfants">4 enfants</option>
-							<option value="5 enfants">5 enfants</option>
-						</select>
-					</div>
-				</div>
-				<button type="submit"><span>Rechercher</span></button>
-			</form>
-		</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Vacation Homes & Condo Rental - Airbnb</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <header>
+      <!-- <div class="background-header">
+        <img src="Image/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg" alt="background images"/>
+      </div> -->
+      <div class="form">
+        <form id="form">
+          <h2 class="title-header"><b>Find homes in United States on Airbnb</b></h2>
+          <div class="describe-header">
+            Discover entire homes and private rooms perfect for any trip.
+          </div>
+          <div class="where">
+            <label for="WHERE">
+              <span>WHERE</span>
+            </label>
+          </div>
+          <input type="text" placeholder="Anywhere" class="input-where" />
+          <div class="row check">
+            <div class="form-group check-in">
+              <div class="label">
+                <label for="check-in">
+                  <span>CHECK-IN</span>
+                </label>
+              </div>
+              <input class="" type="date" min="2019-03-18" />
+            </div>
+            <div class="form-group check-out">
+              <div class="label">
+                <label for="check-out">
+                  <span>CHECK-OUT</span>
+                </label>
+              </div>
+              <input class="" type="date" min="2019-03-18" />
+            </div>
+          </div>
+          <div class="combo">
+            <div class="adults">
+              <div class="label">
+                <label for="ADULTS">ADULTS</label>
+              </div>
+              <select name="adults" id="adults">
+                <option value="1 adult">1 adult</option>
+                <option value="2 adults">2 adults</option>
+                <option value="3 adults">3 adults</option>
+                <option value="4 adults">4 adults</option>
+                <option value="5 adults">5 adults</option>
+                <option value="6 adults">6 adults</option>
+                <option value="7 adults">7 adults</option>
+                <option value="8 adults">8 adults</option>
+                <option value="9 adults">9 adults</option>
+                <option value="10 adults">10 adults</option>
+                <option value="11 adults">11 adults</option>
+                <option value="12 adults">12 adults</option>
+                <option value="13 adults">13 adults</option>
+                <option value="14 adults">14 adults</option>
+                <option value="15 adults">15 adults</option>
+                <option value="16 adults">16 adults</option>
+              </select>
+            </div>
+            <div class="children">
+              <div class="label">
+                <label for="children">CHILDREN</label>
+              </div>
+              <select name="children" id="children" class="">
+                <option value="0 children">0 children</option>
+                <option value="1 children">1 children</option>
+                <option value="2 children">2 children</option>
+                <option value="3 children">3 children</option>
+                <option value="4 children">4 children</option>
+                <option value="5 children">5 children</option>
+              </select>
+            </div>
+          </div>
+          <button type="submit">Search</button>
+        </form>
+      </div>
 	</header>
-	<footer>
-		<div>
-				<svg viewBox="0 0 1000 1000" role="img" aria-label="Page d'accueil" focusable="false" style="height:1em;width:1em;display:block;fill:#767676"><path d="m499.3 736.7c-51-64-81-120.1-91-168.1-10-39-6-70 11-93 18-27 45-40 80-40s62 13 80 40c17 23 21 54 11 93-11 49-41 105-91 168.1zm362.2 43c-7 47-39 86-83 105-85 37-169.1-22-241.1-102 119.1-149.1 141.1-265.1 90-340.2-30-43-73-64-128.1-64-111 0-172.1 94-148.1 203.1 14 59 51 126.1 110 201.1-37 41-72 70-103 88-24 13-47 21-69 23-101 15-180.1-83-144.1-184.1 5-13 15-37 32-74l1-2c55-120.1 122.1-256.1 199.1-407.2l2-5 22-42c17-31 24-45 51-62 13-8 29-12 47-12 36 0 64 21 76 38 6 9 13 21 22 36l21 41 3 6c77 151.1 144.1 287.1 199.1 407.2l1 1 20 46 12 29c9.2 23.1 11.2 46.1 8.2 70.1zm46-90.1c-7-22-19-48-34-79v-1c-71-151.1-137.1-287.1-200.1-409.2l-4-6c-45-92-77-147.1-170.1-147.1-92 0-131.1 64-171.1 147.1l-3 6c-63 122.1-129.1 258.1-200.1 409.2v2l-21 46c-8 19-12 29-13 32-51 140.1 54 263.1 181.1 263.1 1 0 5 0 10-1h14c66-8 134.1-50 203.1-125.1 69 75 137.1 117.1 203.1 125.1h14c5 1 9 1 10 1 127.1.1 232.1-123 181.1-263.1z"></path></svg>
-			<span>© Airbnb, Inc.</span>
+	<div class="container">
+		<h2>
+			<div class="title-body">
+				What guests are saying about homes in United States
+			</div>
+		</h2>
+		<div class="describe-body">
+			<img src="Image/stars.png" alt="">
+			<div class="describe-star">
+				United States homes were rated <strong> 4.8 out of 5 stars</strong> with <strong>31,500,000+ reviews</strong>
+			</div>
 		</div>
-	</footer>
-</body>
+	</div>
+    <footer>
+      <div class="footer">
+        <svg
+          viewBox="0 0 1000 1000"
+          role="img"
+          aria-label="Page d'accueil"
+          focusable="false"
+        >
+          <path
+            d="m499.3 736.7c-51-64-81-120.1-91-168.1-10-39-6-70 11-93 18-27 45-40 80-40s62 13 80 40c17 23 21 54 11 93-11 49-41 105-91 168.1zm362.2 43c-7 47-39 86-83 105-85 37-169.1-22-241.1-102 119.1-149.1 141.1-265.1 90-340.2-30-43-73-64-128.1-64-111 0-172.1 94-148.1 203.1 14 59 51 126.1 110 201.1-37 41-72 70-103 88-24 13-47 21-69 23-101 15-180.1-83-144.1-184.1 5-13 15-37 32-74l1-2c55-120.1 122.1-256.1 199.1-407.2l2-5 22-42c17-31 24-45 51-62 13-8 29-12 47-12 36 0 64 21 76 38 6 9 13 21 22 36l21 41 3 6c77 151.1 144.1 287.1 199.1 407.2l1 1 20 46 12 29c9.2 23.1 11.2 46.1 8.2 70.1zm46-90.1c-7-22-19-48-34-79v-1c-71-151.1-137.1-287.1-200.1-409.2l-4-6c-45-92-77-147.1-170.1-147.1-92 0-131.1 64-171.1 147.1l-3 6c-63 122.1-129.1 258.1-200.1 409.2v2l-21 46c-8 19-12 29-13 32-51 140.1 54 263.1 181.1 263.1 1 0 5 0 10-1h14c66-8 134.1-50 203.1-125.1 69 75 137.1 117.1 203.1 125.1h14c5 1 9 1 10 1 127.1.1 232.1-123 181.1-263.1z"
+          ></path>
+        </svg>
+        <span class="airbnb-icon">© Airbnb, Inc.</span>
+      </div>
+    </footer>
+  </body>
 </html>
