--- a/HTML_Bai1/index.html
+++ b/HTML_Bai1/index.html
@@ -24,7 +24,7 @@
                                     <div class="label">
                                         <label>WHERE</label>
                                     </div>
-                                    <div class="input">
+                                    <div class="_input">
                                         <input type="text" placeholder="Anywhere">
                                     </div>
                                 </div>
@@ -35,8 +35,8 @@
                                             <div class="label">
                                                 <label>CHECK-IN</label>
                                             </div>
-                                            <div class="input">
-                                                <input type="date">
+                                            <div class="_input">
+                                                <input type="date" placeholder="dd/MM/yyyy">
                                             </div>
                                         </div>
                                     </div>
@@ -46,7 +46,7 @@
                                             <div class="label">
                                                 <label>CHECKOUT</label>
                                             </div>
-                                            <div class="input">
+                                            <div class="_input">
                                                 <input type="date">
                                             </div>
                                         </div>
