--- a/index.html
+++ b/index.html
@@ -180,6 +180,133 @@
 				</div>
 			</div>
 		</section>
+		<!-- Travel Section -->
+		<section class="travel-section">
+			<div class="container">
+				<div class="content">
+					<div class="title">
+						<h3>Traveling with Airbnb</h3>
+					</div>
+					<div class="content-detail">
+						<div class="content-inner">
+							<svg viewBox="0 0 32 32" fill="#60B6B5" fill-opacity="0" stroke="#60B6B5" stroke-width="1.5" focusable="false" aria-hidden="true" role="presentation" stroke-linecap="round" stroke-linejoin="round"><path d="m23.99 2.75c-.3 0-.6.02-.9.05-1.14.13-2.29.51-3.41 1.14-1.23.68-2.41 1.62-3.69 2.94-1.28-1.32-2.46-2.25-3.69-2.94-1.12-.62-2.27-1-3.41-1.14a7.96 7.96 0 0 0 -.9-.05c-1.88 0-7.26 1.54-7.26 8.38 0 7.86 12.24 16.33 14.69 17.95a1 1 0 0 0 1.11 0c2.45-1.62 14.69-10.09 14.69-17.95 0-6.84-5.37-8.38-7.26-8.38"></path></svg>
+							<h4>24/7 customer support</h4>
+							<p>Day or night, we’re here for you. Talk to our support team from anywhere in the world, any hour of day.</p>
+						</div>
+						<div class="content-inner">
+							<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false"><path d="m23.57 11.4-1.75-1.76-3.85-3.87-1.78-1.79-2.7-2.71-.82-.83-.22-.23-.06-.06c-.22-.22-.53-.22-.73-.02l-1.75 1.76-3.85 3.87-3.85 3.87-1.75 1.76a1.49 1.49 0 0 0 -.44 1.05v.01c0 .38.15.77.44 1.06l.55.55a1.49 1.49 0 0 0 2.01.08v8.4c0 .81.68 1.45 1.5 1.45h15c .82 0 1.5-.65 1.5-1.45v-8.4c.59.49 1.45.47 2.01-.08l.55-.55c.29-.29.44-.68.44-1.06v-.01c0-.38-.14-.77-.44-1.06zm-3.57 11.16c0 .24-.22.45-.5.45h-15c-.28 0-.5-.21-.5-.45v-9.36l8-7.99 8 7.99zm2.85-9.74-.55.55c-.2.2-.52.2-.71.01l-9.24-9.22a.5.5 0 0 0 -.71 0l-9.24 9.22a.5.5 0 0 1 -.71-.01l-.55-.55a.5.5 0 0 1 -.01-.71l1.75-1.76 3.85-3.87 3.85-3.87 1.4-1.4.77.77 2.7 2.71 1.78 1.79 3.85 3.87 1.75 1.76a.51.51 0 0 1 -.01.71z" fill-rule="evenodd"></path></svg>
+							<h4>Global hospitality standards</h4>
+							<p>Guests review their hosts after each stay. All hosts must maintain a minimum rating and our hospitality standards to be on Airbnb.</p>
+						</div>
+						<div class="content-inner">
+							<svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false"><path d="m15.37 13.54-.01.01a.53.53 0 0 0 .01-.01m-.37 9.46h-11.5c-.28 0-.9-.22-1.38-.58-.71-.52-1.12-1.31-1.12-2.42 0-.04 0-.07.01-.11.09-1.1 1.59-2.44 4.02-3.79a33.14 33.14 0 0 1 2.9-1.42 35.57 35.57 0 0 1 1.31-.54c.63-.26.71-.95.18-1.35a4.55 4.55 0 0 1 -.38-.31 7.1 7.1 0 0 1 -.84-.9c-.73-.92-1.17-1.96-1.2-3.09v-2.99c.07-2.36 2.38-4.5 5.04-4.5 2.67 0 4.96 2.14 4.96 4.5v3c0 1.13-.43 2.17-1.15 3.11a7.35 7.35 0 0 1 -1.09 1.13l-.08.07c-.02.02-.02.02-.05.05s-.03.03-.09.14c-.05.47-.05.47.46.7a.49.49 0 0 0 .36-.15l.06-.05a8.32 8.32 0 0 0 1.23-1.28c.84-1.1 1.35-2.35 1.35-3.72v-3c0-2.92-2.75-5.5-5.96-5.5-3.2 0-5.96 2.56-6.04 5.49v3.01c.03 1.38.56 2.62 1.42 3.71.31.39.63.73.96 1.03.06.05.1.08.15.12a34.28 34.28 0 0 0 -3.98 1.87c-2.73 1.51-4.41 3.02-4.54 4.58a2.41 2.41 0 0 0 -.01.19c0 2.55 1.91 3.99 3.5 4h11.5a.5.5 0 1 0 0-1m7.67-4.22c-.36.74-.97 1.55-1.78 2.38a20.33 20.33 0 0 1 -1.89 1.71 19.94 19.94 0 0 1 -1.89-1.71c-.81-.83-1.42-1.64-1.78-2.38-.22-.45-.33-.86-.33-1.23 0-.99.61-1.56 1.43-1.56.7 0 1.55.53 2.18 1.31a.5.5 0 0 0 .78 0c .63-.78 1.48-1.31 2.18-1.31.82 0 1.43.57 1.43 1.56 0 .36-.11.77-.33 1.23m-1.1-3.78c-.89 0-1.82.5-2.57 1.25-.75-.76-1.68-1.25-2.57-1.25-1.36 0-2.43 1.01-2.43 2.56 0 .53.15 1.08.43 1.66.41.85 1.09 1.74 1.96 2.64a21.09 21.09 0 0 0 2.31 2.05.5.5 0 0 0 .6 0 20.91 20.91 0 0 0 2.31-2.05c.87-.9 1.55-1.79 1.96-2.64.28-.58.43-1.13.43-1.66 0-1.55-1.07-2.56-2.43-2.56" fill-rule="evenodd"></path></svg>
+							<h4>5-star hosts</h4>
+							<p>From fresh-pressed sheets to tips on where to get the best brunch, our hosts are full of local hospitality.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Booked Section -->
+		<section class="booked-section">
+			<div class="container">
+				<div class="content">
+					<div class="title">
+						<h3>Just booked in United States</h3>
+					</div>
+					<div class="content-detail">
+						<div class="content-inner">
+							<div class="image">
+								<a href="#"><img src="https://a0.muscache.com/im/pictures/21611933/43f6de69_original.jpg?aki_policy=large" alt="locate-image"></a>
+							</div>
+							<div class="locate">
+								<span><a href="#">TREEHOUSE . ATLANTA</a></span>
+							</div>
+							<h4><a href="#">Secluded Intown Treehouse</a></h4>
+							<div class="price">
+								<span><a href="#">₫8,700,795  per night . Free cancellati...</a></span>
+							</div>
+							<div class="icon">
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="number"><a href="#">329</a></span>
+							</div>
+						</div>
+						<div class="content-inner">
+							<div class="image">
+								<a href="#"><img src="https://a0.muscache.com/im/pictures/812e040f-6f6f-4cae-ad67-66c050b57c1f.jpg?aki_policy=large" alt="locate-image"></a>
+							</div>
+							<div class="locate">
+								<span><a href="#">ENTIRE HOUSE . JOSHUA TREE</a></span>
+							</div>
+							<h4><a href="#">The Joshua Tree House</a></h4>
+							<div class="price">
+								<span><a href="#">₫6,612,604  per night . Free cancellati...</a></span>
+							</div>
+							<div class="icon">
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="number"><a href="#">407.Superhost</a></span>
+							</div>
+						</div>
+						<div class="content-inner">
+							<div class="image">
+								<a href="#"><img src="https://a0.muscache.com/im/pictures/140333/3ab8f121_original.jpg?aki_policy=large" alt="locate-image"></a>
+							</div>
+							<div class="locate">
+								<span><a href="#">DOME HOUSE . APTOS</a></span>
+							</div>
+							<h4><a href="#">Mushroom Dome Cabin: #1  on airbnb in the world</a></h4>
+							<div class="price">
+								<span><a href="#">₫3,016,276  per night . Free cancellati...</a></span>
+							</div>
+							<div class="icon">
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="number"><a href="#">1295.Superhost</a></span>
+							</div>
+						</div>
+						<div class="content-inner">
+							<div class="image">
+								<a href="#"><img src="https://a0.muscache.com/im/pictures/45680811/f4987a12_original.jpg?aki_policy=large" alt="locate-image"></a>
+							</div>
+							<div class="locate">
+								<span><a href="#">ENTIRE HOUSE . PIONEERTOWN</a></span>
+							</div>
+							<h4><a href="#">Off-grid itHouse</a></h4>
+							<div class="price">
+								<span><a href="#">₫9,280,848 per night . Free cancellati...</a></span>
+							</div>
+							<div class="icon">
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="star"><a href="#"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false"><path d="M971.5 379.5c9 28 2 50-20 67L725.4 618.6l87 280.1c11 39-18 75-54 75-12 0-23-4-33-12l-226.1-172-226.1 172.1c-25 17-59 12-78-12-12-16-15-33-8-51l86-278.1L46.1 446.5c-21-17-28-39-19-67 8-24 29-40 52-40h280.1l87-278.1c7-23 28-39 52-39 25 0 47 17 54 41l87 276.1h280.1c23.2 0 44.2 16 52.2 40z"></path></svg></a></span>
+								<span class="number"><a href="#">236</a></span>
+							</div>
+						</div>
+					</div>
+					<div class="show-all">
+						<span>
+							<a href="#">
+								Show all (22,000+)
+								<svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false"><path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path></svg>
+							</a>
+						</span>
+					</div>
+				</div>
+			</div>
+		</section>
 	</div>
 	<footer class="footer-section">
 		<div class="sub-footer">
