update bai tap 1 CSS

--- a/Bai tap 1 CSS/Baitap1CSS.html
+++ b/Bai tap 1 CSS/Baitap1CSS.html
@@ -94,7 +94,7 @@
 								<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 								<div class="reviewer">
 									<img src="images/ava1.webp" alt="">
-									<p><b>Tina</b><br/>United States</p>
+									<p><b>Tina</b><br/><span>United States</span></p>
 								</div>
 							</div>
 						</div>
@@ -111,7 +111,7 @@
 								<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 								<div class="reviewer">
 									<img src="images/ava2.jpg" alt="">
-									<p><b>Tina</b><br/>United States</p>
+									<p><b>Tina</b><br/><span>United States</span></p>
 								</div>
 							</div>
 						</div>
@@ -128,7 +128,7 @@
 								<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 								<div class="reviewer">
 									<img src="images/ava3.webp" alt="">
-									<p><b>Tina</b><br/>United States</p>
+									<p><b>Tina</b><br/><span>United States</span></p>
 								</div>
 							</div>
 						</div>
